# intent-pilot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/intent_pilot/: __main__.py
src/intent_pilot/run/: app.py
src/intent_pilot/utils/: config.py  encoding.py  img_utils.py  screenshot.py  system_utils.py  terminal.py  viz_utils.py
src/intent_pilot/utils/controller/: controller.py  thought2command.py
src/intent_pilot/utils/models/: askui.py  gpt4.py  model_handler.py  ollama.py  prompts.py
