[project]
name = "intent-pilot"
version = "0.1.1"
description = "what can be said can be automated"
authors = [
    {name = "gitlost-murali-askui", email = "murali.kondragunta@askui.com"},
]
dependencies = [
    "python-dotenv>=1.0.1",
    "Pillow>=10.2.0",
    "requests>=2.31.0",
    "openai>=1.12.0",
    "PyAutoGUI>=0.9.54",
    "plyer>=2.1.0",
    "prompt-toolkit>=3.0.43",
    "fuzzywuzzy[speedup]>=0.18.0",
    "pyperclip>=1.8.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}



[tool.pdm.dev-dependencies]
dependencies = [
    "ruff>=0.0.291",
    "pytest>=7.4.2",
    "isort>=5.12.0",
    "black>=23.9.1",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
intent = "intent_pilot.run.app:main"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
intent = "python -m intent_pilot"
sort = "isort ."
format = "black ."
lint = "ruff check ."
test = "pytest tests/"
checks = {composite = ["sort . -c", "format . --check", "test -v tests/"]}
fix = {composite = ["sort", "format", "lint", "test -v tests/"]}
